--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,11 +29,14 @@ dist.jar=${dist.dir}/ConvertCufflinksToExcel.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.poi-ooxml-3.10-FINAL-20140208.jar=C:\\SharedFolders\\test_software\\poi-3.10-FINAL\\poi-ooxml-3.10-FINAL-20140208.jar
 includes=**
 jar.compress=false
 javac.classpath=\
+    ${reference.BedUtils.jar}:\
     ${reference.ObjectUtils.jar}:\
-    ${reference.BedUtils.jar}
+    ${libs.Apache_POI.classpath}:\
+    ${file.reference.poi-ooxml-3.10-FINAL-20140208.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
