--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,14 +29,40 @@ dist.jar=${dist.dir}/ConvertCufflinksToExcel.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.commons-codec-1.5.jar=C:\\SharedFolders\\test_software\\poi-3.10-FINAL\\lib\\commons-codec-1.5.jar
+file.reference.commons-logging-1.1.jar=C:\\SharedFolders\\test_software\\poi-3.10-FINAL\\lib\\commons-logging-1.1.jar
+file.reference.dom4j-1.6.1.jar=C:\\SharedFolders\\test_software\\poi-3.10-FINAL\\ooxml-lib\\dom4j-1.6.1.jar
+file.reference.junit-4.11.jar=C:\\SharedFolders\\test_software\\poi-3.10-FINAL\\lib\\junit-4.11.jar
+file.reference.log4j-1.2.13.jar=C:\\SharedFolders\\test_software\\poi-3.10-FINAL\\lib\\log4j-1.2.13.jar
+file.reference.poi-examples-3.10-FINAL-20140208.jar=C:\\SharedFolders\\test_software\\poi-3.10-FINAL\\poi-examples-3.10-FINAL-20140208.jar
+file.reference.poi-excelant-3.10-FINAL-20140208.jar=C:\\SharedFolders\\test_software\\poi-3.10-FINAL\\poi-excelant-3.10-FINAL-20140208.jar
 file.reference.poi-ooxml-3.10-FINAL-20140208.jar=C:\\SharedFolders\\test_software\\poi-3.10-FINAL\\poi-ooxml-3.10-FINAL-20140208.jar
+file.reference.poi-ooxml-schemas-3.10-FINAL-20140208.jar=C:\\SharedFolders\\test_software\\poi-3.10-FINAL\\poi-ooxml-schemas-3.10-FINAL-20140208.jar
+file.reference.poi-scratchpad-3.10-FINAL-20140208.jar=C:\\SharedFolders\\test_software\\poi-3.10-FINAL\\poi-scratchpad-3.10-FINAL-20140208.jar
+file.reference.saxon8-xom.jar=C:\\SharedFolders\\test_software\\saxonb8-6-1\\saxon8-xom.jar
+file.reference.saxon8.jar=C:\\SharedFolders\\test_software\\saxonb8-6-1\\saxon8.jar
+file.reference.stax-api-1.0.1.jar=C:\\SharedFolders\\test_software\\poi-3.10-FINAL\\ooxml-lib\\stax-api-1.0.1.jar
+file.reference.xbean.jar=C:\\SharedFolders\\test_software\\xmlbeans-2.6.0\\xmlbeans-2.6.0\\lib\\xbean.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${reference.BedUtils.jar}:\
     ${reference.ObjectUtils.jar}:\
     ${libs.Apache_POI.classpath}:\
-    ${file.reference.poi-ooxml-3.10-FINAL-20140208.jar}
+    ${file.reference.poi-ooxml-3.10-FINAL-20140208.jar}:\
+    ${file.reference.saxon8-xom.jar}:\
+    ${file.reference.saxon8.jar}:\
+    ${file.reference.xbean.jar}:\
+    ${file.reference.poi-ooxml-schemas-3.10-FINAL-20140208.jar}:\
+    ${file.reference.poi-examples-3.10-FINAL-20140208.jar}:\
+    ${file.reference.poi-excelant-3.10-FINAL-20140208.jar}:\
+    ${file.reference.poi-scratchpad-3.10-FINAL-20140208.jar}:\
+    ${file.reference.dom4j-1.6.1.jar}:\
+    ${file.reference.stax-api-1.0.1.jar}:\
+    ${file.reference.commons-codec-1.5.jar}:\
+    ${file.reference.commons-logging-1.1.jar}:\
+    ${file.reference.junit-4.11.jar}:\
+    ${file.reference.log4j-1.2.13.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
